tests/expected/semant03e.semant.err
semant03e.usc:21:13: error: Use of undeclared identifier 'y'
	return x + y;
	           ^
1 Error(s)
